# masters

./: .gitignore  .gitmodules
m2/mon4visualmedia/segformer-failure/: ade20k_labels.txt  improve_crop_inference.py  main.py  make_failure_images.py  print_ade_labels.py  pyproject.toml  run_segformer_failure.py  verify_ood_roi.py
m2/mon4visualmedia/segformer-failure/ood_results/vending_machine/: ood_roi_summary.csv
m2/mon4visualmedia/segformer-failure/ood_results/vending_machine_1/: ood_roi_summary.csv
m2/mon4visualmedia/segformer-failure/ood_results/vending_machine_2/: ood_roi_summary.csv
m2/mon4visualmedia/segformer-failure/ood_results/vending_machine_3/: ood_roi_summary.csv
m2/mon4visualmedia/segformer-failure/results_failure/test/: baseline_class_summary.csv
m2/mon4visualmedia/segformer-failure/results_segformer/test/: gamma_class_summary.csv  gamma_postprocess_class_summary.csv
m2/mon4visualmedia/segformer-failure/thin_results/streetlight_pole/: ood_roi_summary.csv
m2/mon4visualmedia/segformer-failure/thin_results/tower/: ood_roi_summary.csv
m2/mon4visualmedia/segformer-failure/thin_results/tower_crop_improvement/: baseline_full_image_roi.csv  improved_crop_inference.csv
m2/mon4visualmedia/segformer-failure/thin_results/tower_tight/: ood_roi_summary.csv
m2/mon4visualmedia/segformer-failure/thin_results/traffic_light/: ood_roi_summary.csv
tue2network/: batcher_banyan.py
wed1llm/: main.aux  main.bbl  main.blg  main.out  main.tex  references.bib
wed2llm/: compile.sh  main.aux  main.bbl  main.blg  main.out  main.tex  references.bib
(+55 files in other folders)
